[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/PlaceholderUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/DownBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/Dialog.gd" type="Script" id=3]
[ext_resource path="res://GUI/UpBoxScript.gd" type="Script" id=4]
[ext_resource path="res://GUI/Dialog.tres" type="Theme" id=5]
[ext_resource path="res://GUI/Name.tres" type="Theme" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Appear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -90 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UpDialogBox/UpPortraitMargin:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 7, 10 ), Vector2( 7, 10 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Disappear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -120 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UpDialogBox/UpPortraitMargin:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 7, 10 ), Vector2( 7, 10 ) ]
}

[node name="DialogBox" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
rect_clip_content = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpBox" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = -250.0
margin_right = 160.0
margin_bottom = -70.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpDialogBox" parent="UpBox" instance=ExtResource( 1 )]
margin_top = -180.0
margin_bottom = -120.0

[node name="Tween" type="Tween" parent="UpBox/UpDialogBox"]

[node name="UpTextMargin" type="MarginContainer" parent="UpBox/UpDialogBox"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -106.0
margin_top = 7.0
margin_right = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpText" type="RichTextLabel" parent="UpBox/UpDialogBox/UpTextMargin"]
margin_right = 261.0
margin_bottom = 16.0
rect_clip_content = false
theme = ExtResource( 5 )
bbcode_enabled = true
tab_size = 3
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpPortraitMargin" type="MarginContainer" parent="UpBox/UpDialogBox"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -153.0
margin_top = 10.0
margin_right = -103.0
margin_bottom = 60.0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpPortraitTexture" type="TextureRect" parent="UpBox/UpDialogBox/UpPortraitMargin"]
margin_right = 50.0
margin_bottom = 50.0
expand = true
stretch_mode = 1

[node name="NinePatchRect" parent="UpBox/UpDialogBox" instance=ExtResource( 1 )]
margin_left = -156.0
margin_top = -7.0
margin_right = -110.0
margin_bottom = 20.0

[node name="UpNameMargin" type="VBoxContainer" parent="UpBox/UpDialogBox/NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -21.0
margin_top = 6.0
margin_right = 21.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpName" type="RichTextLabel" parent="UpBox/UpDialogBox/NinePatchRect/UpNameMargin"]
margin_right = 42.0
margin_bottom = 18.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
bbcode_enabled = true
tab_size = 1
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpAnimation" type="AnimationPlayer" parent="UpBox"]
playback_speed = 1.25
anims/Appear = SubResource( 1 )
anims/Disappear = SubResource( 2 )

[node name="DownBox" parent="." instance=ExtResource( 2 )]
margin_top = 160.0
margin_bottom = 340.0
[connection signal="tween_completed" from="UpBox/UpDialogBox/Tween" to="UpBox" method="_on_Tween_tween_completed"]
[connection signal="tween_started" from="UpBox/UpDialogBox/Tween" to="UpBox" method="_on_Tween_tween_started"]
